@@ -122,6 +122,7 @@ public class ConfigManagerZG {
 	public static boolean hideUnusedStarSystems;
 	public static boolean enableMegaCreeperGriefing;
 	public static boolean changeContributorNames;
+	public static boolean enableChestValidation;
 	public static boolean spawnGalaxyKnight;
 	public static boolean enableExtremeMode;
 	
@@ -368,6 +369,12 @@ public class ConfigManagerZG {
 		// Whether or not to allow Spawning of Galaxy Knights.
 		spawnGalaxyKnight = configuration.get(CATEGORY_MISC, "Spawn Galaxy Knight", true,
 				"Whether or not to allow Grey Aliens to summon Galaxy Knights when attacked (default: true)").getBoolean();
+		
+		// Make sure chests are on the ground or not. (ExistingEevee)
+		enableChestValidation = configuration
+				.get(CATEGORY_MISC, "Chest Validation", true,
+						"Whether or not to validate chest spawns. " + "Disable if chest generation is causing a crash. (default: true)")
+				.getBoolean();
 		
 		// Should Extreme Mode be enabled? Significantly increases the mod's difficulty.
 		enableExtremeMode = configuration
