@@ -7,6 +7,9 @@
  */
 package zollerngalaxy.recipes;
 
+import cofh.api.util.ThermalExpansionHelper;
+import cofh.core.util.helpers.ItemHelper;
+import cofh.thermalfoundation.init.TFItems;
 import net.minecraft.block.Block;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
@@ -14,9 +17,6 @@ import zollerngalaxy.blocks.ZGBlocks;
 import zollerngalaxy.config.ConfigManagerZG;
 import zollerngalaxy.items.ZGItems;
 import zollerngalaxy.lib.helpers.ZGHelper;
-import cofh.api.util.ThermalExpansionHelper;
-import cofh.core.util.helpers.ItemHelper;
-import cofh.thermalfoundation.init.TFItems;
 
 public class PulverizerRecipes {
 	
@@ -32,6 +32,7 @@ public class PulverizerRecipes {
 		PulverizerRecipes.addRecipe(ZGBlocks.edenCopperOre, TFItems.itemMaterial.dustCopper, 64);
 		PulverizerRecipes.addRecipe(ZGBlocks.xantheonCopperOre, TFItems.itemMaterial.dustCopper, 64);
 		PulverizerRecipes.addRecipe(ZGBlocks.caligroCopperOre, TFItems.itemMaterial.dustCopper, 64);
+		PulverizerRecipes.addRecipe(ZGBlocks.exodusCopperOre, TFItems.itemMaterial.dustCopper, 64);
 		
 		// Tin
 		PulverizerRecipes.addRecipe(ZGBlocks.zolTinOre, TFItems.itemMaterial.dustTin, 65);
@@ -62,6 +63,7 @@ public class PulverizerRecipes {
 		PulverizerRecipes.addRecipe(ZGBlocks.perdIronOre, TFItems.itemMaterial.dustIron);
 		PulverizerRecipes.addRecipe(ZGBlocks.altumIronOre, TFItems.itemMaterial.dustIron);
 		PulverizerRecipes.addRecipe(ZGBlocks.caligroIronOre, TFItems.itemMaterial.dustIron);
+		PulverizerRecipes.addRecipe(ZGBlocks.exodusIronOre, TFItems.itemMaterial.dustIron);
 		
 		// Gold
 		PulverizerRecipes.addRecipe(ZGBlocks.zolGoldOre, TFItems.itemMaterial.dustGold, 1);
@@ -73,6 +75,7 @@ public class PulverizerRecipes {
 		PulverizerRecipes.addRecipe(ZGBlocks.perdGoldOre, TFItems.itemMaterial.dustGold, 1);
 		PulverizerRecipes.addRecipe(ZGBlocks.altumGoldOre, TFItems.itemMaterial.dustGold, 1);
 		PulverizerRecipes.addRecipe(ZGBlocks.caligroGoldOre, TFItems.itemMaterial.dustGold, 1);
+		PulverizerRecipes.addRecipe(ZGBlocks.exodusGoldOre, TFItems.itemMaterial.dustGold, 1);
 		
 		// Aluminum
 		PulverizerRecipes.addRecipe(ZGBlocks.purgAluminumOre, TFItems.itemMaterial.dustAluminum, 68);
@@ -148,8 +151,8 @@ public class PulverizerRecipes {
 	
 	public static void addRecipe(int energy, Block oreIn, ItemStack itemStackOut, int metadata) {
 		int numResult = (ConfigManagerZG.enableExtraPulverizerOutput) ? 4 : 2;
-		ThermalExpansionHelper.addPulverizerRecipe(energy, new ItemStack(oreIn), new ItemStack(ItemHelper.getItemFromStack(itemStackOut),
-				numResult, metadata));
+		ThermalExpansionHelper.addPulverizerRecipe(energy, new ItemStack(oreIn),
+				new ItemStack(ItemHelper.getItemFromStack(itemStackOut), numResult, metadata));
 		totalRecipes++;
 	}
 	
