@@ -10,4 +10,5 @@ Zollern Galaxy v2.0.22
 * Lowered default Outpost generation chance to 5%.
 * Added a new Earth-like planet called Exodus.
     - This Planet can be reached via Tier 3 Rocketship.
+* Added config option to disable validation on chest generation spawns. (ExistingEevee)
 * 
